(nvim+tmux) add cpp config and remove auto restore tmux session

--- a/dot_config/tmux/conf/plugins.conf
+++ b/dot_config/tmux/conf/plugins.conf
@@ -6,7 +6,7 @@ set -g @plugin 'wfxr/tmux-fzf-url'
 
 # Plugin Options
 ## tmux-continuum
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 
 ## fzf-url
 set -g @fzf-url-bind 'u'
